//新增登录和注册逻辑、头像、昵称加载

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.edu.schooltask">
 
+    <uses-permission android:name="android.permission.INTERNET"/>   <!-- 网络访问权限 -->
+
     <application
         android:name="org.litepal.LitePalApplication"
         android:allowBackup="true"
