//增加附近任务图片和点击放大、取消订单标题、修改订单列表item

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,9 @@
         <activity
             android:name=".activity.MoneyActivity"
             android:label="我的钱包" />
-        <activity android:name=".activity.OrderActivity"></activity>
+        <activity android:name=".activity.OrderActivity" />
+        <activity android:name=".activity.ImageActivity"
+            android:theme="@style/ImageStyle"></activity>
     </application>
 
 </manifest>
