--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile 'com.yuyh.imgsel:library:1.3.8+'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.alexvasilkov:gesture-views:2.3.0'
+    compile 'com.orhanobut:dialogplus:1.11@aar'
 }
