--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,12 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -46,16 +48,19 @@ dependencies {
     compile 'com.orhanobut:dialogplus:1.11@aar'
     compile 'com.zhy:okhttputils:2.6.2'
     compile 'com.jaredrummler:material-spinner:1.1.0'
-    compile 'com.yalantis:ucrop:1.5.0'  //裁剪
-    compile 'de.hdodenhof:circleimageview:2.1.0' //圆形
-    compile 'com.qiniu:qiniu-android-sdk:7.3.0' //七牛
-    compile 'id.zelory:compressor:1.0.4'    //图片压缩
+    compile 'com.yalantis:ucrop:1.5.0'
+    //裁剪
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    //圆形
+    compile 'com.qiniu:qiniu-android-sdk:7.3.0'
+    //七牛
+    compile 'id.zelory:compressor:1.0.4'
+    //图片压缩
     compile 'com.youth.banner:banner:1.4.9'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-
 }
 repositories {
     mavenCentral()
