--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         <activity
             android:name=".ui.activity.LoginActivity"
             android:label="@string/login"
-            android:launchMode="singleTop"/>
+            android:launchMode="singleTask" />
         <activity
             android:name=".ui.activity.ReleaseTaskActivity"
             android:label="发布任务"
@@ -86,7 +86,9 @@
         <activity
             android:name=".ui.activity.AboutActivity"
             android:label="关于" />
-        <activity android:name=".ui.activity.UpdatePwdActivity" />
+        <activity
+            android:name=".ui.activity.UpdateLoginPwdActivity"
+            android:label="修改登录密码" />
         <activity android:name="cn.bmob.pay.v3.act.PayAct" />
         <activity
             android:name=".ui.activity.VoucherActivity"
@@ -118,8 +120,10 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".ui.activity.FriendRequestActivity"
-            android:label="验证消息"></activity>
+        <activity
+            android:name=".ui.activity.FriendRequestActivity"
+            android:label="验证消息" />
+        <activity android:name=".ui.activity.UpdatePayPwdActivity" android:label="修改支付密码" />
     </application>
 
 </manifest>
