//优化图片选择框架 //优化任务图片显示

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
     compile 'org.litepal.android:core:1.5.1'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.27'
-    compile 'com.yuyh.imgsel:library:1.3.8'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.alexvasilkov:gesture-views:2.3.0'
     compile 'com.orhanobut:dialogplus:1.11@aar'
@@ -62,6 +61,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.8.1'
     compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.github.lovetuzitong:MultiImageSelector:1.2'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
